FIND_PACKAGE(SWIG REQUIRED)
INCLUDE(${SWIG_USE_FILE})

# We only work with Python 2 for now (not Python 3)
SET(Python_ADDITIONAL_VERSIONS 2.7 2.6 2.5 2.4)
FIND_PACKAGE(PythonLibs)
INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})

INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR}/pyext)

SET(CMAKE_SWIG_FLAGS "-castmode" "-naturalvar" "-Wextra" "-fvirtual"
"-DPySwigIterator=RMF_PySwigIterator" "-c++"
"-DSwigPyIterator=RMF_SwigPyIterator"
"-DRMFEXPORT")
set(CMAKE_SWIG_OUTDIR "${PROJECT_BINARY_DIR}")
include_directories("${PROJECT_BINARY_DIR}/include"
"${PROJECT_SOURCE_DIR}/include" "${PROJECT_SOURCE_DIR}/pyext" ${HDF5_INCLUDE_DIRS})

SET_SOURCE_FILES_PROPERTIES(RMF.i PROPERTIES CPLUSPLUS ON)
SET_SOURCE_FILES_PROPERTIES(RMF.i DEPENDS ${HEADERS})
SWIG_ADD_MODULE(RMF python RMF.i)
SWIG_LINK_LIBRARIES(RMF ${PYTHON_LIBRARIES} RMF)

FILE(GLOB swigfiles "*.i")

INSTALL(FILES ${swigfiles} DESTINATION "${CMAKE_INSTALL_SWIGDIR}")

INSTALL(TARGETS ${SWIG_MODULE_RMF_REAL_NAME} DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
INSTALL(FILES "${CMAKE_BINARY_DIR}/RMF.py" DESTINATION ${CMAKE_INSTALL_PYTHONDIR})
